--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="textbox">
                     <h2 class="lg-heading text-black">Men's Fashion</h2>
-                    <p class="md-heading text-grey"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum odio, repudiandae fuga sint quam porro qui quod iusto omnis veniam.</p>
+                    <p class="md-heading text-grey"> Lorem ipsum dolor sit amet consectetur, adipisicin quod iusto omnis veniam.</p>
                     <p class="btn-secondary"><a href="#">Shop Now</a></p>
                 </div>
 
@@ -55,7 +55,7 @@
                 </div>
                 <div class="textbox">
                     <h2 class="lg-heading text-black">Women's Fashion</h2>
-                    <p class="md-heading text-grey">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, dolor. Deserunt dicta corporis, mollitia delectus repudiandae dignissimos? Aperiam, voluptatum cupiditate.</p>
+                    <p class="md-heading text-grey">Lorem ipsum dolor sit repudiandae dignissimos? Aperiam, cupiditate.</p>
                     <p class="btn-secondary"><a href="#">Shop Now</a></p>
                 </div>
 
