Update Index file

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="textbox">
                     <h2 class="lg-heading text-black">Women's Fashion</h2>
-                    <p class="md-heading text-grey">Lorem ipsum dolor sit repudiandae dignissimos? Aperiam, cupiditate.</p>
+                    <p class="md-heading text-grey">Lorem ipsum dolor sit repudiandae dignissimos? Aperiam, cupiditate omnis veniam.</p>
                     <p class="btn-secondary"><a href="#">Shop Now</a></p>
                 </div>
 
