register.html file updated

--- a/register.html
+++ b/register.html
@@ -26,10 +26,10 @@
                 <h1>Join Cooper</h1>
                  <form id="signin" action="" method="POST">
 
-                    <input type="text" name="fname" placeholder="First Name" required><br>
-                    <input type="text" name="lname" placeholder="Last Name" required><br>
-                    <input type="email" name="email" placeholder="Email" required><br>
-                    <input type="password" name="" placeholder="Password" required><br>
+                    <input type="text" name="fname" placeholder="First Name" required autocomplete="off"><br>
+                    <input type="text" name="lname" placeholder="Last Name" required autocomplete="off"><br>
+                    <input type="email" name="email" placeholder="Email" required autocomplete="off"><br>
+                    <input type="password" name="" placeholder="Password" required autocomplete="off"><br>
 
                     <p>By clicking Agree & Join,you agree to the Cooper User Agreement,Privacy Policy and Cookie Policy. </p>
 
