styling issue solved

--- a/about.html
+++ b/about.html
@@ -32,12 +32,12 @@
 
             
 
-            <div class="cta-banner">
-                <div class="cta-banner-left">
-                    <p class="cta-line">What are you waiting for, reach us right now.</p>
+            <div class="banner">
+                <div class="banner-left">
+                    <p class="cline">What are you waiting for, reach us right now.</p>
                 </div>
-                <div class="cta-banner-right">
-                    <a href="contact.html" class='btn-cta'>Contact Us</a>
+                <div class="banner-right">
+                    <a href="contact.html" class='btn-banner'>Contact Us</a>
                 </div>
             </div>
             
