--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
      </form>
 
      <div class="botom">
-         <input type="checkbox" name="remember" checked="checked">Remember me
+         <input type="checkbox" name="remember" checked="checked">Remember Me
          <a href="#">Forgot Password?</a>
      </div>
 
