--- a/register.html
+++ b/register.html
@@ -24,13 +24,13 @@
     <section class="wrapper">
      <div class="reg container">
         <h1 class="text-red">Join Cooper</h1>
-         <form id="signin" action="" method="POST">
+         <form id="signin" action="connec.php" method="POST">
 
             <input type="text" name="fname" placeholder="First Name" required autocomplete="off"><br>
             <input type="text" name="lname" placeholder="Last Name" required autocomplete="off"><br>
             <input type="email" name="email" placeholder="Email" required autocomplete="off"><br>
             <input type="password" name="" placeholder="Password" required autocomplete="off"><br>
-             <input type="phone Number" name="" placeholder="Number" required autocomplete="off"><br>
+            <input type="phone Number" name="" placeholder="Number" required autocomplete="off"><br>
 
 
             <p>By clicking Agree & Join,you agree to the Cooper User Agreement,Privacy Policy and Cookie Policy. </p>
