--- a/register.html
+++ b/register.html
@@ -29,8 +29,8 @@
             <input type="text" name="fname" placeholder="First Name" required autocomplete="off"><br>
             <input type="text" name="lname" placeholder="Last Name" required autocomplete="off"><br>
             <input type="email" name="email" placeholder="Email" required autocomplete="off"><br>
-            <input type="password" name="" placeholder="Password" required autocomplete="off"><br>
-            <input type="phone Number" name="" placeholder="Number" required autocomplete="off"><br>
+            <input type="password" name="password" placeholder="Password" required autocomplete="off"><br>
+            <input type="number" name="PhoneNumber" placeholder="Number" required autocomplete="off"><br>
 
 
             <p>By clicking Agree & Join,you agree to the Cooper User Agreement,Privacy Policy and Cookie Policy. </p>
