--- a/register.html
+++ b/register.html
@@ -24,7 +24,7 @@
     <section class="wrapper">
      <div class="reg container">
         <h1 class="text-red">Join Cooper</h1>
-         <form id="signin" action="connec.php" method="POST">
+         <form id="signin" action="registration.php" method="POST">
 
             <input type="text" name="fname" placeholder="First Name" required autocomplete="off"><br>
             <input type="text" name="lname" placeholder="Last Name" required autocomplete="off"><br>
